testing/errors/opnotsupp4.a
	c = [] + 3	; -> "Operation not supported."
